--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "sketch.js",
   "scripts": {
+    "start": "node sketch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mejiasparker/uk-snow-prototype.git"
+    "url": "https://github.com/mejiasparker/uk-snow-prototype.git"
   },
   "keywords": [],
   "author": "",
