added node version

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "uk-snow-prototype",
   "version": "1.0.0",
+  "engines": {
+    "node": "4.7.3"
+  },
   "description": "",
   "main": "sketch.js",
   "scripts": {
-    "start": "node sketch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
