--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "main": "sketch.js",
   "scripts": {
+    "start": "node sketch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
